--- a/SI656_AlquilerEquipos.Web/SI656_AlquilerEquipos.Web.csproj
+++ b/SI656_AlquilerEquipos.Web/SI656_AlquilerEquipos.Web.csproj
@@ -18,10 +18,10 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
+    <IISExpressSSLPort>44396</IISExpressSSLPort>
+    <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
+    <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
+    <IISExpressUseClassicPipelineMode>false</IISExpressUseClassicPipelineMode>
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -135,6 +135,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\Cliente\CreateViewModel.cs" />
+    <Compile Include="ViewModel\Cliente\EditViewModel.cs" />
+    <Compile Include="ViewModel\Cliente\IndexViewModel.cs" />
+    <Compile Include="ViewModel\Equipo\CreateViewModel.cs" />
+    <Compile Include="ViewModel\Equipo\EditViewModel.cs" />
+    <Compile Include="ViewModel\Equipo\IndexViewModel.cs" />
+    <Compile Include="ViewModel\Usuario\CreateViewModel.cs" />
+    <Compile Include="ViewModel\Usuario\EditViewModel.cs" />
+    <Compile Include="ViewModel\Usuario\IndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -162,6 +171,8 @@
     <Content Include="Resources\vendor\chart.js\Chart.bundle.min.js" />
     <Content Include="Resources\vendor\chart.js\Chart.js" />
     <Content Include="Resources\vendor\chart.js\Chart.min.js" />
+    <Content Include="Resources\vendor\datatables-original\jquery.dataTables.css" />
+    <Content Include="Resources\vendor\datatables-original\jquery.dataTables.js" />
     <Content Include="Resources\vendor\datatables\dataTables.bootstrap4.css" />
     <Content Include="Resources\vendor\datatables\dataTables.bootstrap4.js" />
     <Content Include="Resources\vendor\datatables\dataTables.bootstrap4.min.css" />
@@ -1748,6 +1759,8 @@
     <Content Include="Resources\vendor\jquery\jquery.min.js" />
     <Content Include="Resources\vendor\jquery\jquery.slim.js" />
     <Content Include="Resources\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="Resources\vendor\sweetalert2\sweetalert2.min.css" />
+    <Content Include="Resources\vendor\sweetalert2\sweetalert2.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Resources\scss\navs\_global.scss" />
@@ -1917,6 +1930,7 @@
     <Content Include="Resources\vendor\fontawesome-free\webfonts\fa-solid-900.woff2" />
     <Content Include="Resources\vendor\jquery\jquery.min.map" />
     <Content Include="Resources\vendor\jquery\jquery.slim.min.map" />
+    <Content Include="Resources\vendor\datatables-original\Spanish.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
