--- a/SI656_AlquilerEquipos.Web/Web.config
+++ b/SI656_AlquilerEquipos.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="db_AlquilerEquipoEntities" connectionString="metadata=res://*/Model_AlquilerEquipos.csdl|res://*/Model_AlquilerEquipos.ssdl|res://*/Model_AlquilerEquipos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-86BQNQIJ;initial catalog=db_AlquilerEquipo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="db_AlquilerEquipoEntities" connectionString="metadata=res://*/Model_AlquilerEquipos.csdl|res://*/Model_AlquilerEquipos.ssdl|res://*/Model_AlquilerEquipos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2E54QI4;initial catalog=db_AlquilerEquipo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
