--- a/WebApplication_AlquilerEquipos/WebApplication_AlquilerEquipos.csproj
+++ b/WebApplication_AlquilerEquipos/WebApplication_AlquilerEquipos.csproj
@@ -181,6 +181,7 @@
       <DependentUpon>AlquilerEquipo.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EquiposServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
