--- a/WebApplication_AlquilerEquipos/Web.config
+++ b/WebApplication_AlquilerEquipos/Web.config
@@ -61,6 +61,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="AlquilerEquiposEntities" connectionString="metadata=res://*/Models.AlquilerEquipo.csdl|res://*/Models.AlquilerEquipo.ssdl|res://*/Models.AlquilerEquipo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-86BQNQIJ;initial catalog=AlquilerEquipos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AlquilerEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=isw.database.windows.net;initial catalog=SI656;user id=andres;password=CooperPeru24;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
